[package]
name = "casita"
version = "0.1.0"
authors = ["Shane Snover <ssnover95@gmail.com>"]
edition = "2021"

[[bin]]
name = "get_certs"
path = "src/bin/get_certs.rs"

[[bin]]
name = "test_certs"
path = "src/bin/test_certs.rs"

[lib]
name = "casita"
path = "src/lib.rs"

[dependencies]
async-channel = "1.6.1"
log = "0.4.14"
openssl = "0.10"
rand = "0.8"
rsa = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.15", features = ["full"] }
tokio-openssl = "0.6.3"
